RbA Build/src/objects/Glazing_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Glass_Pattern__c</fullName>
        <label>Glass Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>No Pattern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obscure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cascade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pebble</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Glazing__c</fullName>
        <label>Glazing</label>
        <picklist>
            <picklistValues>
                <fullName>High Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance Obscure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance SmartSun Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance Sun Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance SmartSun Heat Lock Glass</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Height_Fraction__c</fullName>
        <label>Max Height Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Height_Inches__c</fullName>
        <label>Max Height Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Width_Fraction__c</fullName>
        <label>Max Width Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Width_Inches__c</fullName>
        <label>Max Width Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Glazing Configurations</relationshipLabel>
        <relationshipName>Glazing_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sash_Ratio__c</fullName>
        <label>Sash Ratio</label>
        <picklist>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:2:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tempered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tempered</label>
        <type>Checkbox</type>
    </fields>
    <label>Glazing Configuration</label>
    <nameField>
        <displayFormat>GC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Glazing Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>